// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$autoload should fail with no command definition 1`] = `
{
  "errorCode": "E_NO_COMMAND_DEFINITION",
  "errorParams": [
    "myCommand",
  ],
  "importerCalls": [
    [
      "/home/whoiam/projects/my-whook-project/src/commands/myCommand.js",
    ],
  ],
  "injectorCalls": [],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "🤖 - Wrapping the whook autoloader.",
    ],
  ],
  "resolveCalls": [],
}
`;

exports[`$autoload should fail with no command handler 1`] = `
{
  "errorCode": "E_NO_COMMAND_HANDLER",
  "errorParams": [
    "myCommand",
  ],
  "importerCalls": [
    [
      "/home/whoiam/projects/my-whook-project/src/commands/myCommand.js",
    ],
  ],
  "injectorCalls": [],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "🤖 - Wrapping the whook autoloader.",
    ],
  ],
  "resolveCalls": [],
}
`;
